syntax = "proto3";

option csharp_namespace = "ShopTruck.Store.Grpc";

service StoreGrpcService
{
	rpc GetStoreById(GetStoreByIdRequest) returns (GetStoreByIdResponse);
	rpc GetStoresByVendorId(GetStoresByVendorIdRequest) returns (GetStoresByVendorIdResponse);
	
}

message GetStoreByIdRequest
{
	string id = 1;
}

message GetStoreByIdResponse 
{
  string name = 1;
  string street = 2;
  string City = 3;
  string Country = 4;
  string PostalCode = 5;
}

message GetStoresByVendorIdRequest 
{
  string vendor_id = 1;
}

message GetStoresByVendorIdResponse 
{
  repeated Store stores = 1;
}
message Store {
  string id = 1;
  string name = 2;
  string street = 3;
  string City = 4;
  string Country = 5;
  string PostalCode = 6;
}